# g-claude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Create and distribute a plugin marketplace.md  README.md
.claude-plugin/: marketplace.json
plugins/aisbench/.claude-plugin/: plugin.json
plugins/ascend/.claude-plugin/: plugin.json
plugins/commit-as-prompt/.claude-plugin/: plugin.json
plugins/gitcode-publish/: README.md  SKILL.md
plugins/gitcode-publish/.claude-plugin/: plugin.json
plugins/gitcode-publish/references/: pipeline_tags.md
plugins/model-download/.claude-plugin/: plugin.json
plugins/msagent-integration/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  langgraph.json  pyproject.toml  pyrightconfig.json  start.sh  test_analysis.py
plugins/msagent-integration/backend/: requirements.txt
plugins/msagent-integration/docs/: API.md  DEPLOYMENT.md  TECHNICAL_DESIGN.md
plugins/msagent-integration/src/: app.py  deepseek_setup.py  start_msagent.py
plugins/npu-verification/: SKILL.md
scripts/: bump-skill-versions.py  install-g-claude.py
skills/: CLAUDE.md
skills/aisbench/: SKILL.md  aisbench-accuracy.md  aisbench-datasets.md  aisbench-performance-gsm8k.md  aisbench-performance.md
skills/commit-as-prompt/: examples.md
skills/msmodeling/: SKILL.md  msmodeling-install.md  msmodeling-usage.md
skills/msmodelslim/: SKILL.md
skills/python-with-uv/: SKILL.md
skills/pythonic-code/: SKILL.md  reference.md
skills/setup-neovim-plugin/: SKILL.md
skills/vllm/: SKILL.md  vllm-run.md
skills/vllm-ascend/: vllm-run.md
(+40 files in other folders)
