[project]
name = "msagent-integration"
version = "0.1.0"
description = "Hermes 性能分析平台 - msagent 集成方案"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.0",
    "requests>=2.31",
    "mindstudio-agent",
    "langchain-deepseek>=1.0.1",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "basedpyright>=1.39.5",
    "isort>=8.0.1",
    "mdformat>=1.0.0",
    "pre-commit>=4.6.0",
    "radon>=6.0.1",
    "ruff>=0.15.13",
    "vulture>=2.16",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["msagent-integration"]

[tool.ruff.lint.pycodestyle]
max-line-length = 140
